--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -20,3 +20,19 @@ server {
     alias /home/app/web/media/;
   }
 }
+
+server {
+  listen 443 ssl;
+
+  server_name hongik-grad.cf;
+
+  ssl_certificate /etc/nginx/conf.d/certificate/fullchain1.pem;
+  ssl_certificate_key /etc/nginx/conf.d/certificate/privkey1.pem;
+
+  location / {
+    proxy_pass http://api;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+}
