--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // querydsl
 	implementation 'com.querydsl:querydsl-jpa'
-
+    // validator
+	implementation 'org.hibernate.validator:hibernate-validator-annotation-processor:7.0.1.Final'
+	// jsoup
+	implementation 'org.jsoup:jsoup:1.14.3'
 }
 
 test {
