[feat] 유저 수강 과목 기능, 시간표에서 크롤링 구현 (#6)
* [feat] Graudation api 추가

* [feat] CORS 설정 변경

* [feat] group 이름 변경

* [feat] 쓸모없는 import 삭제

* [feat] CORS global 설정

* [feat] cookie check 메서드 수정

* [feat] 쿠키 설정 추가, 메서드 이름 변경

* [feat] Graduation controller Return type 수정, CORS 어노테이션 제거

* [feat] 테스트 추가

* [feat] JPA 설정 이상한거 수정

* [feat] JPA 설정, gitignore 변경

* [feat] Querydsl QueryFactory 빈 생성

* [feat] User entity 설정 수정

* [feat] 컨트롤러 리팩토링

* [feat] 유저 정보 쿠키에 담는 기능 추가

* [feat] user repository 메서드 추가

* [feat] 크롤러 리팩토링

* [feat] Hash 인코링 방법 변경

* [feat] Unique contstraint 설정 (course_number, course_credit)

* [feat] package 이름 변경

* [feat] 홍익대 시간표에서 과목 가져오는 기능 추가

* [feat] controller 분리 및 시간표 가져오는 기능 구현

* [feat] package 이름 변경

* [feat] package 이름 변경

* [feat] graduation controller frame 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,14 @@ spring:
     activate:
       on-profile: dev
 
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    generate-ddl: false
+    show-sql: false
+    properties.hibernate.format_sql: true
+    hibernate.ddl-auto: validate
+
 server:
   ssl:
     enabled: true
@@ -31,17 +39,6 @@ server:
     key-store-password: 123456
     key-store-type: PKCS12
     key-alias: bns-ssl
-
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-
-    generate-ddl: true
-
-    show-sql: true
-    properties.hibernate.format_sql: true
-
-    hibernate.ddl-auto: create
 
 ---
 
@@ -54,6 +51,6 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: false
-    hibernate.ddl-auto: none
+    hibernate.ddl-auto: validate
     properties.hibernate.format_sql: false
 
