--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,14 +24,6 @@ spring:
     activate:
       on-profile: dev
 
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    generate-ddl: false
-    show-sql: false
-    properties.hibernate.format_sql: true
-    hibernate.ddl-auto: validate
-
 server:
   ssl:
     enabled: true
@@ -39,6 +31,17 @@ server:
     key-store-password: 123456
     key-store-type: PKCS12
     key-alias: bns-ssl
+
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+    generate-ddl: true
+
+    show-sql: true
+    properties.hibernate.format_sql: true
+
+    hibernate.ddl-auto: create
 
 ---
 
@@ -51,6 +54,6 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: false
-    hibernate.ddl-auto: validate
+    hibernate.ddl-auto: none
     properties.hibernate.format_sql: false
 
