--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,6 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: false
-    hibernate.ddl-auto: validate
+    hibernate.ddl-auto: update
     properties.hibernate.format_sql: false
 
