--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator-annotation-processor:7.0.1.Final'
 	// jsoup
 	implementation 'org.jsoup:jsoup:1.14.3'
+	// p6spy
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 }
 
 test {
