--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,10 +27,10 @@ spring:
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    generate-ddl: false
-    show-sql: false
+    generate-ddl: true
+    show-sql: true
     properties.hibernate.format_sql: true
-    hibernate.ddl-auto: validate
+    hibernate.ddl-auto: update
 
 server:
   ssl:
@@ -39,6 +39,11 @@ server:
     key-store-password: 123456
     key-store-type: PKCS12
     key-alias: bns-ssl
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
 
 ---
 
