--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,11 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: false
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: validate
     properties.hibernate.format_sql: false
+  
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: false
 
