--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
     url: jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_DB}?serverTimezone=Asia/Seoul
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
+    
+logging:
+  config: classpath:log4j2.xml
 
 ---
 
